loopfor.LoopCourseForest.scala.error
Erreur de compilation :
LoopCourseForest:8: error: ';' expected but ',' found.
  gauche(),avance(2)
          ^