loopfor.LoopCourseForest.scala.code
for (n<- 1 to 7){
  avance(4)
  gauche();avance(2)
  droite();avance(4)
  droite();avance(2)
  gauche();avance(4)
  gauche();avance(4)
  gauche(),avance(2)
  droite();avance(4)
  droite();avance(2)
  gauche();avance(4)
  gauche();avance(4)
  gauche();avance(2)
  droite();avance(4)
  droite();avance(2)
  gauche();avance(4)
  gauche();avance(4)
  gauche();avance(2)
  droite();avance(4)
  droite();avance(2)
  gauche();avance(4)
  gauche()
}